# milkup-1.0.17-tauri

./: README.md  cspell.json  dev-app-update.yml  milkup.sh  package.json  promptfolio_payload.json  vite.config.mts
.claude/: settings.local.json
.github/workflows/: pr-contributor-welcome.yml  release.yml
_pf_parts/: activity.json  behavioral_fingerprint.json  meta.json  portrait.json  search_profile.json
lang/: index.json
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  dialog.rs  enhancements.rs  file.rs  image.rs  mod.rs  shell.rs  window.rs  workspace.rs
src/assets/iconfont/: demo_index.html  iconfont.json
src/config/: fonts.ts
src/core/: editor.ts  index.ts
src/core/commands/: index.ts
src/core/decorations/: index.ts
src/core/keymap/: index.ts
src/core/nodeviews/: code-block.ts  html-block.ts  image.ts  index.ts  list.ts  math-block.ts
src/core/parser/: index.ts
src/core/plugins/: ai-completion.ts  footnote.ts  heading-sync.ts  html-block-sync.ts  image-sync.ts  index.ts  input-rules.ts  instant-render.ts  line-numbers.ts  link-tooltip.ts  math-block-sync.ts  paste.ts  placeholder.ts  search.ts  slash-command.ts  source-view-transform.ts  syntax-detector.ts  syntax-fixer.ts
src/core/schema/: index.ts
src/core/serializer/: index.ts
src/renderer/: App.vue  electronApiCompat.ts  global.d.ts  index.html  main.ts  style.less  theme-editor.html
(+38 files in other folders)
