[package]
name = "milkup"
version = "1.0.17"
description = "A Markdown editor built with Milkup core and Vue.js"
authors = ["Larry Zhu"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 文件监视（替代 chokidar）
notify = { version = "7" }
# Base64（milkup:// 协议兼容）
base64 = "0.22"
# 随机 ID（替代 nanoid）
uuid = { version = "1", features = ["v4"] }
# 正则（用于清理图片路径）
regex-lite = "0.1"
git2 = "0.19"
reqwest = { version = "0.12", features = ["blocking"] }
pathdiff = "0.2.3"
# docx-rs 暂不引入

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
